# Snake-Clone

./: .gitignore  CMakeLists.txt  DeathState.cpp  DeathState.hpp  Font.hpp  Game.cpp  Game.hpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  Makefile  MenuState.cpp  MenuState.hpp  PauseState.cpp  PauseState.hpp  PlayingState.cpp  PlayingState.hpp  README.md  SDL2 demo.aps  SDL2 demo.vcxproj  SDL2 demo.vcxproj.filters  Score.hpp  SkinMenuState.cpp  SkinMenuState.hpp  Snake.cpp  Snake.hpp  SnakeGame.cpp  SnakeGame.hpp  Source.cpp  Texture.cpp  Texture.hpp  Worm.aps  Worm.rc  Worm.sln  icon.aps  resource1.h
Debug/: Worm.ilk  Worm.res  highscore.worm  source.obj.enc  vc141.idb  vc142.idb
Debug/Worm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Worm.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
Release/: Worm.iobj  Worm.ipdb
Release/Worm.tlog/: CL.command.1.tlog  CL.write.1.tlog  Worm.lastbuildstate  Worm.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Resources/: worm_ico.psd
resources/: worm.psd
src/: Game.cpp  Game.hpp
src/states/: DeathState.cpp  DeathState.hpp  GameState.hpp  PlayingState.cpp  PlayingState.hpp
src/states/game/: Coord.hpp  Score.hpp  Snake.cpp  Snake.hpp
src/states/menu-states/: MainMenuState.cpp  MainMenuState.hpp  MenuState.cpp  MenuState.hpp  PauseState.hpp  SkinMenuState.cpp  SkinMenuState.hpp
src/utils/: Texture.cpp
